fix: align hours with the first day of week

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,23 +1,24 @@
 .shop-hours {
   display: flex;
-  flex-direction: row;
   column-gap: 30px;
 }
-
-
 
 .container {
   display: flex;
   flex-direction: column;
 }
 
-li {
-  list-style: none;
-  width: auto;
+ul {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
 }
 
-.hours {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
+ul p {
+  margin: 0;
+}
+
+li {
+  list-style: none;
+  width: 4vw;
 }
